--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="node_modules/toastr/build/toastr.min.js"></script>
 </head>
 <body class="container">
   <events-app></events-app>
